Changelog
=========

0.36 (unreleased)
-----------------

- Nothing changed yet.


0.35 (2019-09-19)
-----------------

- Fix a typo in the notifications module [Andreas Mantke]
- Improve quotation marks in the notification module [Andreas Mantke]
- Pep8 fixes [Andreas Mantke]
- Update localization files and German localization. [Andreas Mantke]


0.34 (2019-09-07)
-----------------

- Fix the name of the searched portal_catalog index in the
  notifications module [Andreas Mantke]


0.33 (2019-09-07)
-----------------

- Improve the message to the sender of the contact to author
  form. [Andreas Mantke]
- Send notifications about a new product version not to all users of
  the site, but only to the project contact addresses. [Andreas Mantke]
- Update localization files and German localization. [Andreas Mantke]

0.32 (2019-08-16)
-----------------

- Fix regular expressions for validation of file extensions [Andreas Mantke]


0.31 (2019-07-28)
-----------------

- Remove an old function from the smalltemplateproject module [Andreas Mantke]
- Use only the first value of the catalog search tuple for the pattern
  of the regular expressions. {Andreas Mantke]
- Remove default values of the fields for the allowed file extensions,
  because this didn't work with the validation functions [Andreas Mantke]
- Update localization template and translation into Germnan [Andreas Mantke]

0.30 (2019-07-20)
-----------------

- Fix the validator for linked release files and its message
  text [Andreas Mantke]
- Fix the IContextAwareDefaultFactory in the linked release
  module [Andreas Mantke]

0.29 (2019-07-19)
-----------------

- Fix constraints for some options to upload and link template files in
  the release and the linked release module [Andreas Mantke]


0.28 (2019-07-16)
-----------------

- Add a title to fields description and product_description of the
  tupcenter and remove their description entry [Andreas Mantke]